fixed overflowing content

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body{
     padding-right: 10px;
     font-size: 50px;
     height:50px;
-
+    overflow: hidden;
     
     
     
